fixed height on media loading bins/group modal, added min width to prevent media modal checkered background from jumping in width

--- a/src/apps/media-2/src/app/components/MediaDetailsModal.less
+++ b/src/apps/media-2/src/app/components/MediaDetailsModal.less
@@ -25,6 +25,7 @@
       display: block;
       margin: auto;
       max-width: 100%;
+      min-width: 350px;
     }
 
     .ModalLabels {
